api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-deployment
  namespace: test
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/products
        pathType: Prefix
        backend:
          service:
            name: test-service
            port:
              number: 80
      - path: /api/health
        pathType: Prefix
        backend:
          service:
            name: test-service
            port:
              number: 80
